# rs-lm-studio-api

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/chat/: chat.rs  choice.rs  context.rs  delta.rs  message.rs  mod.rs  model.rs  request.rs  response.rs  role.rs  stream.rs  usage.rs
